<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/vNetworkState"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="gone">


    <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="@dimen/padding_normal"
            android:alpha=".5"
            android:padding="@dimen/padding_normal"
            app:srcCompat="@drawable/ic_cloud_off_black_24dp" />

    <TextView
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/network_connection_error_title" />

    <TextView
        android:id="@+id/tvNetworkError"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/network_connection_error_message" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRetry"

            app:backgroundTint="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_normal"
            android:text="@string/network_button_retry" />
</LinearLayout>