<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.movieDetail.MovieDetailFragment">

    <ScrollView
        android:orientation="vertical"
        android:background="?attr/colorPrimaryVariant"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:id="@+id/clDetailView"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/ivPoster"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/movie_detail_poster_view"
                android:src="@drawable/img_placeholder"
                android:scaleType="centerCrop"/>

            <LinearLayout
                android:id="@+id/llBottomLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="500dp"
                android:padding="@dimen/padding_normal"
                android:gravity="center_horizontal"
                android:background="@drawable/bg_top_curved"
                app:layout_constraintTop_toBottomOf="@+id/guideline1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Mad Max: Fury Road"
                    style="?attr/textAppearanceHeadline5"
                    android:textColor="@color/light_white"/>

                <TextView
                    android:id="@+id/tvGenres"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?attr/textAppearanceBody1"
                    android:text="@string/movie_detail_genres_label"
                    android:textColor="@color/normal_text_white"
                    tools:text="Drama • Thriller"/>

                <TextView
                    android:id="@+id/tvTagline"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:layout_width="wrap_content"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    style="?attr/textAppearanceCaption"
                    android:textColor="@color/blue_gray_300"
                    tools:text="Fear can hold you prisoner. Hope can set you free."
                    />


                <TextView
                    android:id="@+id/tvOverViewLabel"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_detail_overview_label"
                    style="?attr/textAppearanceSubtitle1"
                    android:textColor="@color/light_white"
                    tools:text="Overview"/>

                <TextView
                    android:id="@+id/tvOverView"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?attr/textAppearanceBody2"
                    android:textColor="@color/normal_text_white"
                    tools:text="Overview"/>

            </LinearLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="300dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@android:color/transparent"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:navigationIcon="@drawable/ic_twotone_arrow_back_24"
        app:titleTextColor="@color/light_white" />
    <include layout="@layout/include_network_state" />

</RelativeLayout>